<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgProduct"
        android:layout_width="60dp"
        android:layout_height="74dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:fontFamily="@font/inter_medium"
        android:maxLines="2"
        android:text="@string/product_name"
        android:textColor="@color/grayColor_90"
        android:textSize="@dimen/txt_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtProductGrossUnitPrice"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/imgProduct"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtProductNameExtra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/imgProduct"
        android:ellipsize="end"
        android:fontFamily="@font/inter_regular"
        android:maxLines="2"
        android:text="@string/product_name_extra"
        android:textColor="@color/grayColor_70"
        android:textSize="@dimen/txt_14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtProductGrossUnitPrice"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/txtProductName"
        app:layout_constraintTop_toBottomOf="@+id/txtProductName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtProductGrossUnitPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/inter_medium"
        android:maxLines="1"
        android:text="@string/product_gross_unit_price"
        android:textColor="@color/grayColor_90"
        android:textSize="@dimen/txt_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnProductAdd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtProductName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtProductGrossPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:ellipsize="end"
        android:fontFamily="@font/inter_regular"
        android:maxLines="1"
        android:text="@string/product_gross_price"
        android:textColor="@color/grayColor_70"
        android:textSize="@dimen/txt_14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnProductAdd"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/txtProductGrossUnitPrice"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnProductAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:contentDescription="@string/lbl_add"
        android:src="@drawable/ic_add_32"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>